--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.20.0",
     "ejs": "^2.7.4",
     "express": "^4.18.1",
-    "express-handlebars": "^3.1.0",
+    "express-handlebars": "3.0",
     "pug": "^2.0.4"
   },
   "devDependencies": {
