--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^2.7.4",
     "express": "^4.18.1",
     "express-handlebars": "3.0",
+    "mysql2": "^2.3.3",
     "pug": "^2.0.4"
   },
   "devDependencies": {
