--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.18.1",
     "express-handlebars": "3.0",
     "mongodb": "^4.8.1",
+    "mongoose": "^6.5.3",
     "mysql2": "^2.3.3",
     "pug": "^2.0.4",
     "sequelize": "^6.21.3"
